# openai-openapi-template

./: .dockerignore  .env.example  .env.sample  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  gradio.py  gradio_chatbot.py  main.py  main__init__.py  pyproject.toml  run.sh  run_all.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yaml  docker-build-push.yaml  sync_with_hf.yml
app/agent/: chat_agent_client.py  chat_agent_scheme.py
app/api/: __init__.py  chat_api.py  conversation_api.py  management_api.py
app/config/: __init__.py  db.py  log.py  secret.py  security_config.py
app/core/: __init__.py  api_response.py  db_client.py
app/db/: __init__.py  client.py  embedded.py  factory.py  mongo.py
app/mapper/: __init__.py  base_mapper.py  chat_mapper.py  conversation_mapper.py
app/model/: __init__.py  chat_model.py
app/repository/: __init__.py  chat_repository.py
app/schema/: __init__.py  chat_schema.py  conversation.py  conversation_schema.py
app/security/: __init__.py  auth_service.py
app/service/: __init__.py  chat_service.py  chat_validation.py
docker/: mongodb-docker-compose.yaml  postgres-docker-compose.yaml
docs/: conversation.drawio  high-level-architecture.drawio
resources/mock/: chat_api_create_chat_completion.json  conversations_GET.json  (+12 more)
scripts/: api_key_genenerator.py  api_key_generator.sh  deepwiki_scraping.py  deepwiki_scraping_runner.sh  generate_api_key.sh  run_api_key_generator.sh
static/: manifest.json
(+5 files in other folders)
