[project]
name = "openai-api-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "environs>=14.1.1",
    "fastapi>=0.115.12",
    "gradio>=5.30.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "plotly>=6.1.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.13.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]

# ruff line length
[tool.ruff]
line-length = 145